[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/bg_4.png" type="Texture" id=1]
[ext_resource path="res://scenes/fairy.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/walls.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/blood.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/human_manager.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/organ_manager.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/game_state.gd" type="Script" id=7]
[ext_resource path="res://music/Broken.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[node name="level_three" type="Node2D"]

[node name="bg_4" type="Sprite" parent="."]
position = Vector2( 517.26, 299.981 )
scale = Vector2( 8.24673, 4.90209 )
texture = ExtResource( 1 )

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 511.359, 299.68 )
current = true

[node name="walls" parent="." instance=ExtResource( 3 )]
position = Vector2( 154, 146 )

[node name="fairy" parent="." instance=ExtResource( 2 )]
position = Vector2( 111.359, 105.68 )

[node name="energy_label" type="RichTextLabel" parent="."]
margin_left = 898.0
margin_top = 16.0
margin_right = 1000.0
margin_bottom = 104.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_manager" parent="." instance=ExtResource( 5 )]

[node name="organ_manager" parent="." instance=ExtResource( 6 )]

[node name="game_state" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
